voting-app/vote-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-ingress
  namespace: vote
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /vote
          pathType: Prefix
          backend:
            service:
              name: vote
              port:
                number: 5000
        - path: /result
          pathType: Prefix
          backend:
            service: 
              name: result
              port:
                number: 5001
